popularity-contest (1.13) UNRELEASED; urgency=low

  * Update server-side scripts to current popcon.debian.org version.

 -- Bill Allombert <ballombe@debian.org>  Sat, 14 Feb 2004 16:34:37 +0100

popularity-contest (1.12) unstable; urgency=low

  * Use dpkg --print-installation-architecture instead of $Config{archname}
    to report the platform.
  * Update server-side scripts to current popcon.debian.org version.
  * Fix sh scripts to avoid non POSIX test options. (Closes: #231958).
  * Update French debconf translation, thanks Christian Perrier. 
    (Closes: #231294)
  * Update Dutch debconf translation, thanks Bart Cornelis. (Closes: #229752)

 -- Bill Allombert <ballombe@debian.org>  Tue, 10 Feb 2004 17:24:10 +0100

popularity-contest (1.11) unstable; urgency=medium

  * Raise the priority of the participation question from medium to
    high to make sure it is displayed in the normal Sarge install.
  * Add Danish debconf translation, thanks to Morten Brix
    Pedersen (Closing: #230022)
  * Only generate host ID when it is needed.
  * Use quotes for all variables in the config file.

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 31 Jan 2004 17:39:19 +0100

popularity-contest (1.10) unstable; urgency=low

  * Petter Reinholdtsen
    - Added Japanese debconf translation thanks to Kenshi
      Muto. (Closes: #229538)
    - Make sure /etc/popularity-contest.conf is readable by user
      nobody, no matter the umask of root.
    - Drop the intro note, and show the explanation as part of the
      participate question. (Closes: #229573)
    - Update Norwegian Bokmål debconf translation.
    - Remove the question asking if it is ok to edit MAILTO address,
      and move the default values into
      /usr/share/popularity-contest/default.conf. (Closes: #229288, #229111)
    - Change to use dh_perl -d' to only depend on the base perl packages.
  * Bill Allombert
    - Update server-side scripts to current popcon.debian.org version.
